# aegis-sre-sandbox

./: .env.example  .gitignore  README.md  docker-compose.yml
aegis-sre/: .coveragerc  .env.template  .gitignore  ARCHITECTURE.md  DEBUG_REPORT.md  Dockerfile  HARDENING_REPORT.md  P0_FIXES.md  SCALE_PLAN.md  STONE_PROGRESS.md  TESTING_STRATEGY.md  TIMELINE.md  bad_math.py  benchmark_crucible.py  conftest.py  fire_three_incidents.py  main.py  pyproject.toml  requirements-cloud.txt  requirements-dev.txt  requirements.txt  run_evals.py  sentry_test.py  storm_test.py  test_checkpointer.py  test_webhook.py  worker.py
aegis-sre/aegis_sre/: config.py
aegis-sre/aegis_sre/core/: __init__.py  approvals.py  service.py
aegis-sre/aegis_sre/infra/: __init__.py  broker.py  cache.py  factory.py  pubsub.py  store.py
aegis-sre/aegis_sre/integrations/: __init__.py  tool_registry.py
aegis-sre/aegis_sre/orchestrator/: action_executor.py  git_tools.py  graph.py  incident_tools.py  k8s_tools.py  llm.py  logs_tools.py  metrics_tools.py  policy.py  prompt_safety.py  rag_engine.py  remediation_runner.py  safety.py  sandbox_engine.py  schemas.py  validator.py  vcs_provider.py  verifier.py
aegis-sre/aegis_sre/telemetry/: alert_adapter.py  api_receiver.py  auth.py  cache.py  database.py  k8s_watcher.py  logger.py  metrics.py  queue.py  tracing.py
aegis-sre/aegis_sre/tests/: test_action_executor.py  test_action_plan.py  test_alert_adapter.py  (+44 more)
aegis-sre/deploy/: docker-compose.cloud.yml  docker-compose.onprem.yml
aegis-sre/eval/: corpus.json
aegis-sre/tests/: test_api_receiver.py
(+26 files in other folders)
